==> unkerize/sec/units/nrf/try/RF24.c <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

uint8_t read_register(uint8_t reg)
{
  uint8_t result;

  csn(LOW);

  spi_transfer( R_REGISTER | ( REGISTER_MASK & reg ) );
  result = spi_transfer(0xff);

  csn(HIGH);

  return result;
}

uint8_t write_register(uint8_t reg, uint8_t value)
{
  uint8_t status;

  csn(LOW);

  status = spi_transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
  spi_transfer(value);

  csn(HIGH);

  return status;
}

uint8_t write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
  uint8_t status;
  const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

   data_len = rf24_min(data_len, payload_size);
   uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

  csn(LOW);

  status = spi_transfer( writeType );
  while ( data_len-- ) {
    spi_transfer(*current++);
  }
  while ( blank_len-- ) {
    spi_transfer(0);
  }

  csn(HIGH);

  return status;
}

uint8_t read_payload(void* buf, uint8_t data_len)
{
  uint8_t status;
  uint8_t* current = reinterpret_cast<uint8_t*>(buf);

  if(data_len > payload_size) data_len = payload_size;
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;


  csn(LOW);

  status = spi_transfer( R_RX_PAYLOAD );
  while ( data_len-- ) {
    *current++ = spi_transfer(0xFF);
  }
  while ( blank_len-- ) {
    spi_transfer(0xff);
  }

  csn(HIGH);

  return status;
}

uint8_t spiTrans(uint8_t cmd){

  uint8_t status;

  csn(LOW);
  status = spi_transfer( cmd );
  csn(HIGH);

  return status;
}

uint8_t begin(void)
{

//RF24::RF24(uint16_t _cepin, uint16_t _cspin):
//  ce_pin(_cepin), csn_pin(_cspin),

  p_variant = false;
  payload_size = 32;
  dynamic_payloads_enabled = false;
  addr_width =5 ;
  csDelay = 5  //,pipe0_reading_address(0)

  pipe0_reading_address[0]=0;

  uint8_t setup=0;

    // Initialize pins
    pinMode(ce_pin,OUTPUT);

    pinMode(csn_pin,OUTPUT);

//    _SPI.begin();
    ce(LOW);
    csn(HIGH);

  // Must allow the radio time to settle else configuration bits will not necessarily stick.
  // This is actually only required following power up but some settling time also appears to
  // be required after resets too. For full coverage, we'll always assume the worst.
  // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
  // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
  // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
  delay( 5 ) ;

  // Reset NRF_CONFIG and enable 16-bit CRC.
  write_register( NRF_CONFIG, 0x0C ) ;

  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
  // sizes must never be used. See documentation for a more complete explanation.
  setRetries(5,15);

  // Reset value is MAX
  //setPALevel( RF24_PA_MAX ) ;

  // check for connected module and if this is a p nRF24l01 variant
  //
  if( setDataRate( RF24_250KBPS ) )
  {
    p_variant = true ;
  }
  setup = read_register(RF_SETUP);
  /*if( setup == 0b00001110 )     // register default for nRF24L01P
  {
    p_variant = true ;
  }*/

  // Then set the data rate to the slowest (and most reliable) speed supported by all
  // hardware.
  setDataRate( RF24_1MBPS ) ;

  // Initialize CRC and request 2-byte (16bit) CRC
  //setCRCLength( RF24_CRC_16 ) ;

  // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
  toggle_features();
  write_register(FEATURE,0 );
  write_register(DYNPD,0);
  dynamic_payloads_enabled = false;

  // Reset current status
  // Notice reset and flush is the last thing we do
  write_register(NRF_STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

  // Set up default configuration.  Callers can always change it later.
  // This channel should be universally safe and not bleed over into adjacent
  // spectrum.
  setChannel(76);

  // Flush buffers
  flush_rx();
  flush_tx();

  powerUp(); //Power up by default when begin() is called

  // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
  // PTX should use only 22uA of power
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );

  // if setup is 0 or ff then there was no response from module
  return ( setup != 0 && setup != 0xff );
}

void stopListening(void)
{
  ce(LOW);

  delayMicroseconds(txDelay);

  if(read_register(FEATURE) & _BV(EN_ACK_PAY)){
    delayMicroseconds(txDelay); //200
        flush_tx();
  }
  //flush_rx();
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );

  write_register(EN_RXADDR,read_register(EN_RXADDR) | _BV(child_pipe_enable[0])); // Enable RX on pipe0

  //delayMicroseconds(100);

}

void reUseTX(){
                write_register(NRF_STATUS,_BV(MAX_RT) );                          //Clear max retry flag
                spiTrans( REUSE_TX_PL );
                ce(LOW);                                                                                  //Re-Transfer packet
                ce(HIGH);
}

void startWrite( const void* buf, uint8_t len, const uint8_t multicast ){

  // Send the payload

  //write_payload( buf, len );
  write_payload( buf, len,multicast? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD ) ;
  ce(HIGH);
  #if defined(CORE_TEENSY) || !defined(ARDUINO) || defined (RF24_SPIDEV) || defined (RF24_DUE)
        delayMicroseconds(10);
  #endif
  ce(LOW);


}

uint8_t txStandBy(){

        while( ! (read_register(FIFO_STATUS) & _BV(TX_EMPTY)) ){
                if( get_status() & _BV(MAX_RT)){
                        write_register(NRF_STATUS,_BV(MAX_RT) );
                        ce(LOW);
                        flush_tx();    //Non blocking, flush the data
                        return 0;
                }
        }

        ce(LOW);                           //Set STANDBY-I mode
        return 1;
}

uint8_t txStandBy(uint32_t timeout, uint8_t startTx){

    if(startTx){
          stopListening();
          ce(HIGH);
        }
        uint32_t start = millis();

        while( ! (read_register(FIFO_STATUS) & _BV(TX_EMPTY)) ){
                if( get_status() & _BV(MAX_RT)){
                        write_register(NRF_STATUS,_BV(MAX_RT) );
                                ce(LOW);                                                                                  //Set re-transmit
                                ce(HIGH);
                                if(millis() - start >= timeout){
                                        ce(LOW); flush_tx(); return 0;
                                }
                }
        }


        ce(LOW);                                   //Set STANDBY-I mode
        return 1;

}

uint8_t getDynamicPayloadSize(void)
{
  uint8_t result = 0;

  csn(LOW);
  spi_transfer( R_RX_PL_WID );
  result = spi_transfer(0xff);
  csn(HIGH);

  if(result > 32) { flush_rx(); delay(2); return 0; }
  return result;
}

void toggle_features(void)
{
  csn(LOW);

  spi_transfer( ACTIVATE );
  spi_transfer( 0x73 );

  csn(HIGH);
}

void writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
  const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

  uint8_t data_len = rf24_min(len,32);

  csn(LOW);

  spi_transfer(W_ACK_PAYLOAD | ( pipe & 0x07 ) );

  while ( data_len-- )
    spi_transfer(*current++);

  csn(HIGH);
}
