==> damiandrzewicz/SmartHomeAvrDevices/ConnectorRF24/src/RF24/RF24.cpp <==
#include <util/delay.h>
#include <avr/pgmspace.h>
#include <stdlib.h>
#include <string.h>
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"
#include "../utils/utils.h"
#include "../uart/uart.h"

bool RF24::begin(void)
{
	uint8_t setup=0;
	m_spi = SPI::getInstance();

	setupPins();

	//CE_LOW;
	//CSN_HIGH;

	// Must allow the radio time to settle else configuration bits will not necessarily stick.
	// This is actually only required following power up but some settling time also appears to
	// be required after resets too. For full coverage, we'll always assume the worst.
	// Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
	// Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
	// WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
	_delay_ms( 5 ) ;

	// Reset NRF_CONFIG and enable 16-bit CRC.
	write_register( NRF_CONFIG, 0x0C ) ;

	  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
	  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
	  // sizes must never be used. See documentation for a more complete explanation.
	  setRetries(5,15);

	  // Reset value is MAX
	  //setPALevel( RF24_PA_MAX ) ;

	  // check for connected module and if this is a p nRF24l01 variant
	  //
	  if( setDataRate( RF24_250KBPS ) )
	  {
	    p_variant = true ;
	  }
	  setup = read_register(RF_SETUP);
	  /*if( setup == 0b00001110 )     // register default for nRF24L01P
	  {
	    p_variant = true ;
	  }*/

	  // Then set the data rate to the slowest (and most reliable) speed supported by all
	  // hardware.
	  setDataRate( RF24_1MBPS ) ;

	  // Initialize CRC and request 2-byte (16bit) CRC
	  //setCRCLength( RF24_CRC_16 ) ;

	  // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
	  toggle_features();
	  write_register(FEATURE,0 );
	  write_register(DYNPD,0);
	  dynamic_payloads_enabled = false;

	  // Reset current status
	  // Notice reset and flush is the last thing we do
	  write_register(NRF_STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

	  // Set up default configuration.  Callers can always change it later.
	  // This channel should be universally safe and not bleed over into adjacent
	  // spectrum.
	  setChannel(76);

	  // Flush buffers
	  flush_rx();
	  flush_tx();

	  powerUp(); //Power up by default when begin() is called

	  // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
	  // PTX should use only 22uA of power
	  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );

	  // if setup is 0 or ff then there was no response from module
	  return ( setup != 0 && setup != 0xff );
}

bool RF24::txStandBy(){

    #if defined (FAILURE_HANDLING) || defined (RF24_LINUX)
		uint32_t timeout = millis();
	#endif
	while( ! (read_register(FIFO_STATUS) & _BV(TX_EMPTY)) ){
		if( get_status() & _BV(MAX_RT)){
			write_register(NRF_STATUS,_BV(MAX_RT) );
			CE_LOW;
			flush_tx();    //Non blocking, flush the data
			return 0;
		}
		#if defined (FAILURE_HANDLING) || defined (RF24_LINUX)
			if( millis() - timeout > 95){
				errNotify();
				#if defined (FAILURE_HANDLING)
				return 0;
				#endif
			}
		#endif
	}

	CE_LOW;			   //Set STANDBY-I mode
	return 1;
}

bool RF24::txStandBy(uint32_t timeout, bool startTx){

    if(startTx){
	  stopListening();
	  CE_HIGH;
	}
	uint32_t start = millis();

	while( ! (read_register(FIFO_STATUS) & _BV(TX_EMPTY)) ){
		if( get_status() & _BV(MAX_RT)){
			write_register(NRF_STATUS,_BV(MAX_RT) );
				CE_LOW;											  //Set re-transmit
				CE_HIGH;
				if(millis() - start >= timeout){
					CE_LOW; flush_tx(); return 0;
				}
		}
		#if defined (FAILURE_HANDLING) || defined (RF24_LINUX)
			if( millis() - start > (timeout+95)){
				errNotify();
				#if defined (FAILURE_HANDLING)
				return 0;
				#endif
			}
		#endif
	}


	CE_LOW;				   //Set STANDBY-I mode
	return 1;

}

void RF24::stopListening(void)
{
  CE_LOW;

  _delay_us(90);

  if(read_register(FEATURE) & _BV(EN_ACK_PAY)){
	  _delay_us(120); //200
	  flush_tx();
  }
  //flush_rx();
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );


  write_register(EN_RXADDR,read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0]))); // Enable RX on pipe0

  //delayMicroseconds(100);

}

void RF24::writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
  const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

  uint8_t data_len = rf24_min(len,32);
  beginTransaction();
  m_spi->writeReadByte(W_ACK_PAYLOAD | ( pipe & 0x07 ) );

  while ( data_len-- )
	  m_spi->writeReadByte(*current++);
  endTransaction();
}

void RF24::startWrite( const void* buf, uint8_t len, const bool multicast ){

  // Send the payload

  //write_payload( buf, len );
  write_payload( buf, len,multicast? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD ) ;
  CE_HIGH;
  #if defined(CORE_TEENSY) || !defined(ARDUINO) || defined (RF24_SPIDEV) || defined (RF24_DUE)
	_delay_us(10);
  #endif
  CE_LOW;
}

void RF24::reUseTX(){
		write_register(NRF_STATUS,_BV(MAX_RT) );			  //Clear max retry flag
		spiTrans( REUSE_TX_PL );
		CE_LOW;										  //Re-Transfer packet
		CE_HIGH;
}

uint8_t RF24::getDynamicPayloadSize(void)
{
  uint8_t result = 0;

  beginTransaction();
  m_spi->writeReadByte( R_RX_PL_WID );
  result = m_spi->writeReadByte(0xff);
  endTransaction();

  if(result > 32) { flush_rx(); _delay_ms(2); return 0; }
  return result;
}

uint8_t RF24::read_register(uint8_t reg, uint8_t* buf, uint8_t len)
{
  uint8_t status;

  beginTransaction();
  status = m_spi->writeReadByte( R_REGISTER | ( REGISTER_MASK & reg ) );
  while ( len-- ){
    *buf++ = m_spi->writeReadByte(0xff);
  }
  endTransaction();

  return status;
}

uint8_t RF24::read_register(uint8_t reg)
{
  uint8_t result;

  beginTransaction();
  m_spi->writeReadByte( R_REGISTER | ( REGISTER_MASK & reg ) );
  result = m_spi->writeReadByte(0xff);
  endTransaction();

  return result;
}

uint8_t RF24::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
  uint8_t status;

  beginTransaction();
  status = m_spi->writeReadByte( W_REGISTER | ( REGISTER_MASK & reg ) );
  while ( len-- )
	  m_spi->writeReadByte(*buf++);
  endTransaction();


  return status;
}

uint8_t RF24::write_register(uint8_t reg, uint8_t value)
{
  uint8_t status;

  beginTransaction();
  status = m_spi->writeReadByte( W_REGISTER | ( REGISTER_MASK & reg ) );
  m_spi->writeReadByte(value);
  endTransaction();

  return status;
}

uint8_t RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
  uint8_t status;
  const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

  data_len = rf24_min(data_len, payload_size);
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

  beginTransaction();
  status = m_spi->writeReadByte( W_TX_PAYLOAD );
  while ( data_len-- ) {
	  m_spi->writeByte(*current++);
  }
  while ( blank_len-- ) {
	  m_spi->writeByte(0);
  }
  //m_spi->writeByte(0);
  endTransaction();

  return status;
}

uint8_t RF24::read_payload(void* buf, uint8_t data_len)
{
  uint8_t status;
  uint8_t* current = reinterpret_cast<uint8_t*>(buf);

  if(data_len > payload_size) data_len = payload_size;
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

  beginTransaction();
  status = m_spi->writeReadByte( R_RX_PAYLOAD );
  while ( data_len-- ) {
    *current++ = m_spi->writeReadByte(0xFF);
  }
  while ( blank_len-- ) {
	  m_spi->writeReadByte(0xff);
  }
  endTransaction();

  return status;
}

void RF24::toggle_features(void)
{
    beginTransaction();
    m_spi->writeReadByte( ACTIVATE );
    m_spi->writeReadByte( 0x73 );
	endTransaction();
}

uint8_t RF24::spiTrans(uint8_t cmd){

  uint8_t status;

  beginTransaction();
  status = m_spi->writeReadByte( cmd );
  endTransaction();

  return status;
}
